--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -32,11 +32,11 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
 
-    <!-- Cities data file -->
-    <script type="text/javascript" src="static/js/cities.js"></script>
+    <!-- Cities data file
+    <script type="text/javascript" src="static/js/cities.js"></script> -->
 
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/logicStep5.js"></script>
+    <script type="text/javascript" src="static/js/challenge_logic.js"></script>
 
 </body>
 </html>
